--- a/style.css
+++ b/style.css
@@ -57,10 +57,11 @@ body{
 }
 .star{
     display: flex;
+    margin-top: 15px;
     justify-content: center;
     align-items: center;
     width: 5%;
-    padding: 0.625rem 0.75rem;
+    padding: 0.75rem 1.0625rem;
     border-radius: 50%;
     background-color: #262E38;
 }
@@ -73,6 +74,7 @@ body{
     font-weight: 700;
 }
 #title{
+    margin-top: 15px;
     font-size: 24px;
     font-weight: 700;
 }
